# flight_the_power

./: Cargo.toml  README.md  build.rs  flight_the_power-b96e32575802bf00.js  index.html
.github/workflows/: deploy.yml
mobile/: Cargo.toml  Makefile  manifest.yaml
mobile/mobile.xcodeproj/: project.pbxproj
mobile/src/: lib.rs
ron/: power_unlocks.ron  powers.ron  settings.ron
src/: game.rs  lib.rs  loading.rs  main.rs  menu.rs  save.rs  settings.rs  todo.rs  ui.rs
