[package]
name = "flightthepower"
version = "0.1.0"
publish = false
authors = ["AwfullyMatt -- flightthepower@proton.me"]
edition = "2021"
build = "build.rs"

[dependencies]
bevy = { version = "0.15.1", default-features = true }
bevy_asset_loader = { version = "0.22.0", features = ["2d"] }
rand = "0.9.0"
serde = "1.0.217"

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1.7"
wasm-bindgen = "0.2.92"
